solved card header overlapping nav bar problem. adjust card size. add new card. Signed-off-by: Jerry Desktop <jerry.wangrj@gmail.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@
 		max-width: 80%;
 		text-align:center;
 		margin-top: -280px;
-		padding-left: 15%;
+		padding-left: 20%;
 		padding-right: 5%;
 	}
 
@@ -94,7 +94,7 @@
 
 	/*destop navigation*/
 	.first_nav {
-		position: fixed;
+		position: Fixed;
 		top: 0;
 		right: 0;
 		left: 0;
@@ -103,6 +103,7 @@
 		font-size: 18px;
 		display: block;
 		margin-left: 270px;
+		z-index:1;
 	}
 
 	/*CDU image on the left*/
@@ -198,6 +199,7 @@
 		background-color: #382a54;
 		border-top-right-radius: 5px;
 		border-top-left-radius:5px;
+		display:content;
 	}
 
 	/**/
@@ -213,15 +215,16 @@
 	.card .button {
 		border: solid;
 		background-color: white;
-		padding: 8px ;
+		padding: 6px ;
 		text-decoration: none;
 		display: inline-block;
 		font-size: 16px;
 		font-weight: bold;
 		color: #A349E4;
-		margin: 8px;
+		margin: 10px;
 		cursor: pointer;
 		font-family: sans-serif;
+		border-radius:5px;
 	}
 
 	/**/
